<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GeoQuiz</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="true_button">True</string>
    <string name="false_button">False</string>
    <string name="prev_button">Prev</string>
    <string name="next_button">Next</string>
    <string name="correct_toast">Correct!</string>
    <string name="incorrect_toast">Incorrect!</string>
    <string name="question_birthday">Abbie was born in 2006.</string>
    <string name="question_pet">Abbie\'s dog is named Odie.</string>
    <string name="question_driver">Abbie is a good driver.</string>
    <string name="question_mom">Mom is Abbie\'s favorite.</string>
    <string name="question_talon">Talon is 2 years old.</string>
    <string name="question_carter">Carter is 3 years old.</string>
    <string name="question_old">Mom looks older than dad.</string>
    <string name="cheat_button">Cheat!</string>
    <string name="show_answer_button">Show Answer</string>
    <string name="judgment_toast">Cheating is wrong.</string>
    <string name="warning_text_view">Are you sure you want to do this?</string>
    <string name="title_activity_cheat">CheatActivity</string>

</resources>
